[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/enterprise.png" type="Texture" id=1]
[ext_resource path="res://UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Highscores.gd" type="Script" id=3]
[ext_resource path="res://CRT.tscn" type="PackedScene" id=4]
[ext_resource path="res://ButtonStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://ButtonStylePressed.tres" type="StyleBox" id=6]
[ext_resource path="res://ButtonDisabledStyle.tres" type="StyleBox" id=7]

[node name="Highscores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRT" parent="." instance=ExtResource( 4 )]

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_Image" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = -251.0
margin_right = 251.0
margin_bottom = 251.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="VBoxContainer" parent="Margin"]
margin_left = 16.0
margin_top = 16.0
margin_right = 484.0
margin_bottom = 784.0
custom_constants/separation = 32
alignment = 1

[node name="Title" type="Label" parent="Margin/Scores"]
margin_top = 156.0
margin_right = 468.0
margin_bottom = 192.0
text = "High Scores"
align = 1
valign = 1

[node name="Scroll" type="ScrollContainer" parent="Margin/Scores"]
margin_top = 224.0
margin_right = 468.0
margin_bottom = 544.0
rect_min_size = Vector2( 0, 320 )
scroll_horizontal_enabled = false

[node name="Center" type="CenterContainer" parent="Margin/Scores/Scroll"]
margin_right = 468.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="LoadingText" type="Label" parent="Margin/Scores/Scroll/Center"]
margin_left = 29.0
margin_right = 438.0
margin_bottom = 36.0
text = "Moriarity is retreiving the scores..."
align = 1
valign = 1

[node name="ScoreList" type="GridContainer" parent="Margin/Scores/Scroll/Center"]
margin_left = 234.0
margin_top = 18.0
margin_right = 234.0
margin_bottom = 18.0
size_flags_horizontal = 4
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 3

[node name="BackToMenu" type="Button" parent="Margin/Scores"]
margin_left = 156.0
margin_top = 576.0
margin_right = 312.0
margin_bottom = 612.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
text = "Back to menu"

[node name="GetScores" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Margin/Scores/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="request_completed" from="GetScores" to="." method="_on_GetScores_request_completed"]
